--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>gh-pages-sample</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <div id="app"></div>
+    <script src="js/index.jsx"></script>
 </body>
 </html>
