--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>gh pages sample</title>
 </head>
 <body>
-  <main id="app"></main>
+  <div id="app"></div>
   <script src="js/index.jsx"></script>
 </body>
 </html>
