[ci skip] Update

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<!DOCTYPE html><html lang="en"> <head> <meta charset="UTF-8"> <title>gh pages sample</title> </head> <body> <div id="app"></div> <script src="js.cb3650a7.js"></script> </body> </html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>gh pages sample</title></head><body> <div id="app"></div> <script src="js.ae6b50a7.js"></script>
+</body></html>
